--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:personalprojectmanagementtool
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:personalprojectmanagementtool
+
+spring.datasource.url = jdbc:mysql://localhost:3306/KANBAN_TOOL
+spring.datasource.username=root
+spring.datasource.password=drronidz@12041994
+
+#Using the right database platform is extremely important on Spring Boot 2.0
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+#Conflict With HEROKU from local host
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
+
